# AI4S-agent-tools

./: .gitignore  Dockerfile.tmpl  README.md  TEMPLATE.Dockerfile  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: DEPLOY.md
hack/: build_docker.py  deploy.sh  gen_k8s.py
infra/k8s/paper-search/: deployment.yaml  ingress.yaml  service.yaml
infra/k8s_templates/: deployment.yaml.j2  ingress.yaml.j2  secret.yaml.j2  service.yaml.j2
k8s-manifest/: deployment.yaml  ingress.yaml  secret.example.yaml  service.yaml
servers/: catalysis_mcp_server.py  deepmd_docs_rag_server.py
servers/DPA/: Dockerfile  pyproject.toml  server.py
servers/DPACalculator/: pyproject.toml  server.py
servers/Paper_Search/: Dockerfile  README.md  pyproject.toml  server.py
servers/catalysis/: server.py
servers/deepmd_docs_rag/: pyproject.toml  server.py
servers/pubchem/: INSTALL.md  pyproject.toml  run_server.sh  server.py
servers/pubchem-mcp-server/: README.md  mcp-config-example.json  server.py
servers/pubchem-mcp-server/python_version/: README.md  mcp_server.py  server.py  setup.py
servers/pubchem-mcp-server/python_version/pubchem_mcp_server/: server.py  xyz_utils.py
servers/pubchem/python_version/pubchem_mcp_server/: __init__.py
