[project]
name = "dpa"
version = "0.1.0"
description = "Deep Potential Agent for atomistic simulation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.3",
    "numpy",
    "ase",
    "seekpath",
    "deepmd-kit",
    "dpdata",          
    "phonopy",
    "pymatgen",
    "spglib",         
    "scipy",             
]