[project]
name = "dpa"
version = "0.1.0"
description = "Deep Potential Agent for atomistic simulation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32.3",
    "flask>=3.1.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "ase>=3.22.1",
    "seekpath>=2.0.1",
    "deepmd-kit",  
    "dpdata",
    "phonopy",
    "pymatgen",
    "spglib",
    "matplotlib",    
    "typing-extensions",  
    "pyyaml"           
]