[project]
name = "pubchem-mcp-server"
version = "1.0.0"
description = "PubChem MCP Server - Provides PubChem compound data retrieval functionality"
authors = [
    { name = "PubChem MCP Team" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
rdkit = ["rdkit>=2022.9.1"]

[project.scripts]
pubchem-mcp = "pubchem_mcp_server.cli:main"
pubchem-mcp-server = "pubchem_mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]